# unit-root

./: .gitignore  Cargo.toml  README.md  deny.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/workflows/: devcontainer.yml  pull_request.yml  rust.yml
benches/: adf.rs  dickeyfuller.rs  ols.rs
examples/: adf.rs  dickeyfuller.rs  simple.rs
src/: lib.rs  prelude.rs  regression.rs
src/distrib/: dickeyfuller.rs  mod.rs
src/tools/: adf.rs  dickeyfuller.rs  mod.rs
src/utils/: mod.rs
