[package]
name = "unit-root"
version = "0.4.0"
edition = "2021"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
description = "Unit root tests"
license = "Apache-2.0"
categories = ["science", "mathematics"]
keywords = ["math", "statistics", "unit-root", "adf"]
homepage = "https://github.com/ssoudan/unit-root"
repository = "https://github.com/ssoudan/unit-root"
documentation = "https://docs.rs/unit-root"
readme = "README.md"
exclude = [
    "/.github/*",
    "/.cargo/*",
    "/.gitignore",
]

[features]
default = []
unstable = [ "rand", "rand_distr"]

[[bench]]
name = "ols"
harness = false
required-features = [ "unstable" ]

[[bench]]
name = "dickeyfuller"
harness = false
required-features = [ "unstable" ]

[[bench]]
name = "adf"
harness = false
required-features = [ "unstable" ]

[dependencies]
nalgebra = "0"
thiserror = "1"
rand = { version = "0", optional = true }
rand_distr = { version = "0", optional = true }
num-traits = "0"

[dev-dependencies]
rand = "0"
rand_distr = "0"
approx = "0"
rand_chacha = "0"
criterion = "0"